--- a/mvp/pubspec.yaml
+++ b/mvp/pubspec.yaml
@@ -1,4 +1,4 @@
-name: reduxflutter
+name: mvp
 description: A new Flutter project.
 
 dependencies:
@@ -8,8 +8,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.0
-  redux: "^3.0.0"
-  flutter_redux: "^0.5.0"
 
 dev_dependencies:
   flutter_test:
