--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -8,6 +8,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.0
+  flutter_launcher_icons: "^0.3.2"
 
 dev_dependencies:
   flutter_test:
@@ -28,7 +29,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - assets/zoro.png
-   - assets/summer.png
+   - assets/sdi_bg.png
+   - assets/sdi.png
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -56,3 +58,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies, 
   # see https://flutter.io/custom-fonts/#from-packages
+flutter_icons:
+  image_path: "assets/sdi.png" 
+  android: true
+  ios: true
