--- a/myfirebase/pubspec.yaml
+++ b/myfirebase/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   firebase_core: any
   google_sign_in: "^3.0.3"
   firebase_auth: "^0.5.10"
+  http: ^0.11.3
 
 dev_dependencies:
   flutter_test:
