--- a/sliver/android/local.properties
+++ b/sliver/android/local.properties
@@ -1,3 +1,3 @@
 sdk.dir=C:\\Users\\test\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\Users\\test\\dart\\flutter
+flutter.sdk=C:\\flutter
 flutter.buildMode=debug
