--- a/prototype/pubspec.yaml
+++ b/prototype/pubspec.yaml
@@ -5,13 +5,13 @@ dependencies:
   flutter:
     sdk: flutter
   
-  flutter_launcher_icons: "^0.3.2"
-  redux: "^3.0.0"
-  flutter_redux: "^0.5.0"
-  firebase_database: "^0.4.6"
-  firebase_core: any
-  google_sign_in: "^3.0.3"
-  firebase_auth: "^0.5.10"
+  # flutter_launcher_icons: "^0.3.2"
+  # redux: "^3.0.0"
+  # flutter_redux: "^0.5.0"
+  # firebase_database: "^0.4.6"
+  # firebase_core: any
+  # google_sign_in: "^3.0.3"
+  # firebase_auth: "^0.5.10"
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -35,8 +35,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - assets/zoro.png
-   - assets/sdi_bg.png
+  #  - assets/zoro.png
+  #  - assets/sdi_bg.png
    - assets/sdi.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -64,7 +64,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies, 
   # see https://flutter.io/custom-fonts/#from-packages
-flutter_icons:
-  image_path: "assets/sdi.png"
-  android: true
-  ios: true
+# flutter_icons:
+#   image_path: "assets/sdi.png"
+#   android: true
+#   ios: true
