--- a/prototype/pubspec.yaml
+++ b/prototype/pubspec.yaml
@@ -50,12 +50,26 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: 'Brela'
+      fonts: 
+        - asset: assets/fonts/Brela_Regular.otf 
+    - family: 'Fira Code'
+      fonts:
+        - asset: assets/fonts/FiraCode_Regular.ttf
+        - asset: assets/fonts/FiraCode_Retina.ttf
+    - family: 'Butler'
+      fonts:
+        - asset: assets/fonts/Butler_Regular.otf
+        - asset: assets/fonts/Butler_Medium.otf
+    - family: 'Crimson'
+      fonts:
+        - asset: assets/fonts/CrimsonText_Regular.ttf
+        - asset: assets/fonts/CrimsonText_Italic.ttf
+    - family: 'Jura'
+      fonts:
+        - asset: assets/fonts/Jura_Regular.ttf
+        - asset: assets/fonts/Jura_Italic.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
