--- a/prototype/pubspec.yaml
+++ b/prototype/pubspec.yaml
@@ -35,9 +35,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - assets/zoro.png
-   - assets/sdi_bg.png
-   - assets/sdi.png
+    - assets/google_sign_in.png
+    - assets/sdi.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
@@ -70,6 +69,10 @@ flutter:
       fonts:
         - asset: assets/fonts/Jura_Regular.ttf
         - asset: assets/fonts/Jura_Italic.ttf
+    - family: 'Roboto'
+      fonts:
+        - asset: assets/fonts/Roboto_Regular.ttf
+         
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
@@ -78,7 +81,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies, 
   # see https://flutter.io/custom-fonts/#from-packages
-flutter_icons:
-  image_path: "assets/sdi.png"
-  android: true
-  ios: true
+# flutter_icons:
+#   image_path: "assets/sdi.png"
+#   android: true
+#   ios: true
