--- a/prototype/pubspec.yaml
+++ b/prototype/pubspec.yaml
@@ -35,7 +35,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/google_sign_in.png
+    - assets/facebook.png
+    - assets/google.png
     - assets/sdi.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
